maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:14: error: not found: value i
    i = 0;
    ^