maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!isOverBaggle()) {
    keepHandOnSideWall();
    forward();
  }
  
  pickupBaggle();
}

def keepHandOnSideWall() {
  if (isFacingWall()) {
    right();
  } else {
    i = 0;
    left();
    
    if (isFacingWall()) right();
  }
}